2020-07-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Use rlca instead of rlc a, RFE #686.
	* src/pdk/gen.c:
	  Improve read from literal pointer.
	* src/SDCCopt.c:
	  Fix bug #3075.

2020-07-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c,
	  support/regression/tests/bug-3040.c:
	  Fix code generation for pdk additive operators with two block-scope const static operands.

2020-06-30 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/SDCCpeeph.c
	  src/ds390/main.c
	  src/mcs51/main.c
	  src/pdk/main.c
	  src/port.h
	  src/stm8/main.c
	  src/z80/main.c
	  src/z80/peep.c
	  src/z80/peep.h
	  src/z80/peeph-ez80_z80.def
	  Partially implement RFE #683: Support canJoinRegs peephole constraint

2020-06-29 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* debugger/mcs51/Makefile.in: include dependancy on dbuf*

2020-06-29 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/main.c
	  src/z80/peeph-ez80_z80.def
	  src/z80/peeph-z80n.def
	  Implement RFE #632: Add separate peephole definition files for eZ80 and Z80N

2020-06-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCpeeph.c:
	  Fix notSimilar(), patch #332 by Baŝto.

2020-06-28 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* sdas/asxxsrc/asdbg.c (BaseFileName): Possible fix for bug #3068

2020-06-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c,
	  src/z80/main.c:
	  instructionSize peephole support for gbz80, patch by Baŝto.

2020-06-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  support/regression/tests/bug-3066.c:
	  Fix bug #3066.
	* src/pdk/gen.c,
	  support/regression/tests/bug-3065.c:
	  Fix bug #3065.

2020-06-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c,
	  src/z80/peeph-gbz80.def:
	  Support for sp in notUsed for gbz80, patch #326 by Baŝto.
	* src/z80/gen.c:
	  Use tlcs90 (sp) adressing mode.
	* src/z80/peep.c,
	  src/z80/main.c:
	  notUsed() for gbz80 with flag support, from patch by Baŝto.
